2003-05-25  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/decorations.c: Sync up motif hints structure to aix,hp,
	solaris.

2003-05-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/misc.c (GrabEm):
	do not confine the pointer to the root window when grabbed; this can
	cause the pointer to be warped to another screen

2003-05-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (check_window_style_change):
	fixed update of window styles w/ DestroyStyle

2003-04-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (do_menu):
	the NoWarp position hint option works with root menus too

2003-04-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (restore_focus_after_unmap):
	iconified windows without an icon do not receive focus

2003-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (expand_extended_var):
	removed unused variable

	* libs/Colorset.c (CreateBackgroundPixmap):
	fixed size calculation of aspect pixmaps

2003-03-17  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/functions.c:
	* fvwm/fvwm2.1:
	* NEWS:
	backported single letter variable replacements, like $[w.id]

2003-03-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (Iconify):
	backed out previous patch

2003-03-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (Iconify):
	initialise icon position to +0+0 if there is neiter a picture nor a
	title

2003-02-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/gnome.c (GNOME_SetClientList):
	fixed compile problem

	* fvwm/move_resize.c (get_outline_rects):
	(draw_move_resize_grid):
	initial drawing and final undrawing of wire frame no longer toggles the
	pixel in the top left corner of the screen

2003-02-13  olicha  <olivier.chapuis@free.fr>

	* fvwm/gnome.c (GNOME_SetClientList):
	Applied David Fries patch which fixes a possible crash with more
	than 256 windows

2003-02-09  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1: * Update %space/%tab description in menu.
	Give the XorValue range.
