@@ -24,6 +24,10 @@
 #include "config.h"
 
 #include <stdio.h>
+#include <unistd.h>		/* for STDIN_FILENO */
+#include <sys/types.h>		/* for open */
+#include <sys/stat.h>		/* for open */
+#include <fcntl.h>		/* for open */
 #include <signal.h>
 #include <errno.h>
 #include <X11/keysym.h>
@@ -782,8 +786,10 @@ void CMD_Exec(F_CMD_ARGS)
   /* Not everyone has vfork! */
   if (!(fork())) /* child process */
   {
-    /* close stdin so the exec'd process knows its not interactive */
-    close(0);
+    /* This is for fixing a problem with rox filer */
+    int fd;
+    fd = open("/dev/null", O_RDONLY, 0);
+    dup2(fd,STDIN_FILENO);
     if (execl(exec_shell_name, exec_shell_name, "-c", cmd, NULL)==-1)
     {
       fvwm_msg(ERR,"exec_function","execl failed (%s)",strerror(errno));
